# wxo_git_template

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-draft.yml  deploy-live.yml  pre-commit.yml  test-tools.yml
agents/My_Example_Agent/agents/native/: My_Example_Agent.yaml
scripts/: export_agents_to_orchestrate.py  export_tools_to_orchestrate.py  import_agents_from_orchestrate.py  import_tools_from_orchestrate.py
tools/hello_world/: hello_world.py  requirements.txt
tools/hello_world/tests/: test_hello_world.py
