[project]
name = "wxo-git-managed"
version = "0.1.0"
description = "Git-managed agents and tools for IBM watsonx Orchestrate"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "ibm-watsonx-orchestrate>=2.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "ruff>=0.9",
    "pre-commit>=4.0",
]
# Add tool-specific optional dependencies here, e.g.:
# tools-my-tool = ["some-package>=1.0"]

[tool.pytest.ini_options]
testpaths = ["tools"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
]
ignore = [
    "S603",  # subprocess call - check for untrusted input (we control all inputs)
    "S607",  # starting a process with a partial path (orchestrate CLI)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # allow assert in tests
"**/tests/**" = ["S101"]
